--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ paginate: 5
 gems: [jekyll-paginate]
 port: 4000
 safe: true
-url: https://dmonagha.github.io/
+url: https://dmonagha.github.io/cv
 author: Fábio Madeira
 
 # edit this section with your information
