--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ email_full: mailto:derek@sysadmin.fail
 website: sysadmin.fail
 website_full: https://sysadmin.fail/
 github: dmonagha
+linkedin: dmonagha
 
 # needed for travis-ci build
 exclude: [vendor]
